[UI/UX:System] Fix nested scrollbar in live chat full screen mode

--- a/site/public/css/chatroom.css
+++ b/site/public/css/chatroom.css
@@ -6,7 +6,7 @@
 }
 
 main#main.full-screen-mode .chatroom-container {
-    height: 100vh;
+    height: calc(100vh - 40px);
     border: none;
     box-shadow: none;
 }
